--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,80 +1,403 @@
-/* cascading style sheet */
+/* 
+    title-font-size:35px;
 
-/* latest version css3 */
+*/
+/* ---------------------------- ROOT VARIABLES ---------------------------- */
+:root{
+    --title-font-size:40px;
+    --defaut-background-color:#ececec;
+    --default-primary-color:#202121;
+    --default-secondary-color:#5da2d5;
+    --primary-fonts:'Bebas Neue', cursive;
+    --default-font-size:16px;
+}
+/* ---------------------------- RESETTING ---------------------------- */
+*{
+    margin: 0;
+    padding: 0;
+    
+}
+/* ---------------------------- DEFAULTS ---------------------------- */
+body{
+    background-color: var(--defaut-background-color);
+    color: var(--default-primary-color);
+    font-family: var(--primary-fonts);
+    font-size: var(--default-font-size);
+}
+/* ---------------------------- index.html ---------------------------- */
+/* ---------------------------- HEADING ---------------------------- */
+.title{
+    color: #5da2d5;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: var(--title-font-size,35px);
+    padding: 0.5rem;
+    /* background-color: white; */
+}
+/* ---------------------------- NAVIGATION ---------------------------- */
+.navigation{
+    position: sticky;
+    top: 0;
+    background-color: var(--defaut-background-color);
+    box-shadow: 5px 0px 10px 0px grey;
+    /* padding: 1rem; */
+    z-index: 9999;
+    font-size: 1.5rem;
+}
+nav > ul {
+    list-style: none;
+    text-align: center;
+}
+nav > ul > li{
+    display: inline-flex;
+    padding: 1rem;
+}
+nav > ul > li > a{
+    text-decoration: none;
+}
+nav > ul > li > a:link,a:visited{
+    color: #202121;
+}
+nav > ul > li:hover {
+    color: #202121;
+    text-decoration: underline;
+    background-color: white;
+    /* padding: 1rem 0 1rem 0; */
+}
 
-/* ====================================================inline css==================================================== */
-/* <h1 style="color:red;"></h1> */
+.navigation .collapse-btn{
+    display: none;
+    /* cursor: pointer; */
+}
+.navigation .cancel-btn{
+    display: none;
+    /* cursor: pointer; */
+}
+.navigation .collapse-btn i span{
+    font-family: var(--primary-fonts); 
+}
+.navigation .cancel-btn i span{
+    font-family: var(--primary-fonts); 
+}
+/* ---------------------------- MAIN ---------------------------- */
+/* ---------------------------- SECTION 1 ---------------------------- */
+.section-1{
+    text-align: center;
+    padding: 2rem;
+    background-color: white;
+}
+.section-1 > figure{
+    display: flex;
+    justify-content: center;
+}
+.section-1 > figure > img{
+    height: 30vh;
+    width:30vw;
+}
+/* ---------------------------- SECTION 2 ---------------------------- */
+.cover-img{
+    width: 100%;
+    height: 100vh;
+}
+.heading-2{
+    color: white;
+    text-align: center;
+    font-size: 3rem;
+    text-shadow: 5px 5px 10px var(--default-primary-color);
+}
+/* ----------------------------  FOOTER ---------------------------- */
+footer{
+    background-color: var(--default-primary-color);
+    color: var(--defaut-background-color);
+    padding: 1rem;
+}
+footer section{
+    margin: 2rem;
+    color: var(--defaut-background-color);
+    text-align: center;
+}
+.copyright{
+    text-align: center;
+    font-size: 2rem;
+}
+.copyright h4{
+    color: grey;
+    font-size: 1rem;
+}
+.social-icons > h3{
+    text-align: center;
+    color: grey;
+    font-size: 1.5rem;
+}
+.social-icons > i{
+    color: whitesmoke;
+    font-size: 2rem;
+    padding: 0.5rem;
+}
+.social-icons > i:hover{
+    color: var(--default-secondary-color);
+}
+/* ----------------------------  teams.html ---------------------------- */
+/* ----------------------------  TEAMS ---------------------------- */
+.teams, .matches, .venues, .gallery, .stats{
+    padding: 2rem;
+}
+.teams{
+    background-color: #dfe2e2;
+}
+.teams .team-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.teams .team-group .team-item img{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    margin: 1rem;    
+}
+.csk img{
+    border: 3rem solid #fddb3a;
+    box-shadow: 0 0 30px 5px grey;
+}
+.csk img:hover{
+    box-shadow: 0 0 30px 5px #fddb3a;
+}
+.dc img{
+    border: 3rem solid #192965;
+    box-shadow: 0 0 30px 5px grey;
+}
+.dc img:hover{
+    box-shadow: 0 0 30px 5px #192965;
+}
+.kep img{
+    border: 3rem solid #ce0f3d;
+    box-shadow: 0 0 30px 5px grey;
+}
+.kep img:hover{
 
-/* ====================================================internal css==================================================== */
-/* <style>
-    h1{
-        color:red;
+    box-shadow: 0 0 30px 5px #ce0f3d;
+}
+.kkr img{
+    border: 3rem solid #3e206d;
+    box-shadow: 0 0 30px 5px grey;
+}
+.kkr img:hover{
+    border: 3rem solid #3e206d;
+    box-shadow: 0 0 30px 5px #3e206d;
+}
+.mi img{
+    border: 3rem solid #46b3e6;
+    box-shadow: 0 0 30px 5px grey;
+}
+.mi img:hover{
+    border: 3rem solid #46b3e6;
+    box-shadow: 0 0 30px 5px #46b3e6;
+}
+.rr img{
+    border: 3rem solid #4a47a3;
+    box-shadow: 0 0 30px 5px grey;
+}
+.rr img:hover{
+    border: 3rem solid #4a47a3;
+    box-shadow: 0 0 30px 5px #4a47a3;
+}
+.srh img{
+    border: 3rem solid #eb8242;
+    box-shadow: 0 0 30px 5px grey;
+}
+.srh img:hover{
+    border: 3rem solid #eb8242;
+    box-shadow: 0 0 30px 5px #eb8242;
+}
+/* ----------------------------  matches.html ---------------------------- */
+/* ----------------------------  MATCHES ---------------------------- */
+.matches{
+    /* background-color: #f3d250; */
+    background-color: #1cb3c8;
+}
+
+.matches .match-table{
+    margin: 2rem auto;
+}
+.matches table{
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    font-weight: bold; 
+    font-size: 1.5rem;   
+    width: 100%;
+    text-transform: uppercase;
+    color: white;
+    /* background-color: #5da2d5; */
+}
+.match-table > tbody >tr:hover{
+    opacity: 0.6;
+    color: var(--default-primary-color);
+    background-color: white;
+}
+.match-table>caption{
+    padding:1rem 0;
+    color: #5da2d5;
+    margin: 0 auto;
+    background-color: white;
+}
+.match-table {
+    background-color: var(--default-secondary-color);
+    box-shadow: 0 10px 30px 10px black;
+}
+/* ----------------------------  venues.html ---------------------------- */
+/* ----------------------------  VENUES ---------------------------- */
+.venues{
+    background-color: #3c415e;
+}
+.venue-group{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+}
+.venue-item{
+    text-align: center;
+}
+.venue-item > img{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    margin: 2rem;
+    box-shadow: 0 0 30px 5px var(--default-primary-color);
+}   
+/* ----------------------------  stats.html ---------------------------- */
+/* ----------------------------  STATS ---------------------------- */
+.stats{
+    background-color: #e9e4e6;
+}
+.stats-group{
+    margin: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.stats-group > div{
+    margin: 2rem;   
+}
+.stats-group table{
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    padding: 2rem 4rem;
+}
+.stats-group table th{
+    padding: 1rem;
+}
+table > caption{
+    margin: 1rem;
+}
+.team-stats > table {
+    /* border: 2px solid black; */
+    background-color:#5da2d5;
+    color: white;
+    box-shadow: 0 10px 30px 10px grey;
+}
+.team-stats > table > caption{
+    color: #5da2d5;
+    background-color: white;
+    margin: 0 auto;
+    padding:1rem 1rem;
+    /* text-shadow: 0px 5px 5px var(--default-primary-color); */
+}
+.batting-stats > table {
+    /* border: 2px solid orange; */
+    background-color: orange;
+    color: white;
+    box-shadow: 0 10px 30px 10px grey;
+}
+.batting-stats > table > caption{
+    color: orange;
+    background-color: white;
+    margin: 0 auto;
+    padding:1rem 1rem;
+    /* text-shadow: 0px 5px 5px var(--default-primary-color); */
+}
+.bowling-stats > table{
+    /* border: 2px solid purple; */
+    background-color: #8b2f97;
+    color: white;
+    box-shadow: 0 10px 30px 10px grey;
+}
+.bowling-stats > table > caption{
+    color: #8b2f97;
+    margin: 0 auto;
+    background-color: white;
+    padding:1rem 1rem;
+    /* text-shadow: 0px 5px 5px var(--default-primary-color); */
+}
+/* ----------------------------  gallery.html ---------------------------- */
+/* ----------------------------  GALLERY ---------------------------- */
+.gallery{
+    background-color: #738598;
+}
+.gallery-group{
+    margin: 2rem;
+}
+.gallery-group > figure{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+.gallery-group > figure >img{
+    height: 300px;
+    width: 300px;
+    margin: 0.2rem;
+}
+.gallery-group > figure >img:hover{
+    height: 320px;
+    width: 320px;
+    opacity: 0.5;
+    /* transition-duration: 1s; */
+    /* transition-delay: -1s; */
+}
+/* ----------------------------  MEDIA QUERIES ---------------------------- */
+@media screen and (max-width:728px){
+    .title{
+        display:none;
     }
-</style> */
-
-/* ====================================================external css==================================================== */
-/* <link href="app.css"/> */
-/* app.css */
-/* h2{
-    color:red;
-} */
-
-/* ====================================================css selectors==================================================== */
-/* tag selector h1{}*/
-/* class selector .class-name{} */
-/* id selector #id-name{} */
-/* attribute selector [type='radio']{margin:20px} */
-
-/* ====================================================color==================================================== */
-/* color-name */
-/* rgb */
-/* hex-code */
-/* rgba */
-
-/* ==================================================== font style==================================================== */
-/* font-size:10px; px,rem,em,% */
-/* font-family:monospace,option2,option2 */
-
-/* ====================================================image style==================================================== */
-/* widht:100px; */
-/* height:100px; */
-
-/* ====================================================border style==================================================== */
-/* border-style:solid|dotted; */
-/* border-color:Red; */
-/* border-width:10px; */
-/* border-radius:10px; */
-
-/* ====================================================background style==================================================== */
-/* background-color:blue */
-
-/* ====================================================box====================================================*/
-/* padding:top right bottom left */
-/* margin :top right bottom left */
-
-/* ====================================================selector priority==================================================== */
-/* id-name>class-name>tag-name */
-/* inline>internal>external */
-/* !important = most important style and you must apply this style */
-
-/* ====================================================css variables==================================================== */
-/* --variable-name:value; */
-/* style:var(--variable-name,fallback-value) */
-/* :root{ --variable1; --variable2,--variable3... } */
-
-/* ====================================================media queries==================================================== */
-/* @media (condition){apply changes} */
-
-/* ====================================================css grid==================================================== */
-/* display:grid */
-/* grid-template-columns:col1 col2 col3; */
-/* grid-template-rows:row1 row2px row3fr; */
-/* grid-column-gap:value; */
-/* grid-row-gap:value; */
-/* grid-gap:row column; */
-
-/* ====================================================flexbox==================================================== */
-/* display:flex */
-/* flex-direction:row/column/row-reverse/column-reverse */
-
+    nav > ul > li{
+        display: inline;
+        text-transform: uppercase;
+        padding: 0 0.2rem 0 0.2rem;
+        font-size: 1.5rem;
+    }
+    .section-1 > figure > img{
+        height: 100%;
+        width: 100vw;
+    }
+    .teams .team-group .team-item img{
+        height: 200px;
+        width: 200px;
+    }
+    .navigation .collapse-btn{
+        display: inline-block;
+    }
+    .navigation ul{
+        display: none;
+    }
+    .stats-group table {
+        font-size: 0.7rem;
+    }
+    .matches table {
+        font-size: 0.7rem   ;
+    }
+    .buttons{
+        padding: 1rem;
+    }
+    .nav-links{
+        padding: 1rem;
+    }
+}
 
